On branch main  Your branch is up to date with 'origin/main'.  Changes to be committed: 	modified:   Curriculum.html 	modified:   README.md

--- a/Curriculum.html
+++ b/Curriculum.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Matheus Laidmer da Silva - Curriculum Vitae</title>
   <link rel="stylesheet" type="text/css" href="app.css">
-  </head>
+</head>
+
 <body>
   <header>
     <h1>Matheus Laidmer da Silva</h1>
@@ -13,11 +15,16 @@
     <br>
     <p>Informações de contato: matheuslaidmer@gmail.com | Telefone: +55 (51) 99610-7939</p>
     <br>
-    <p>Teutônia - Rio Grande do Sul - Brasil<p>
+    <p>Teutônia - Rio Grande do Sul - Brasil
+    <p>
+      <br>
+    <p>26 Anos - 16/02/1997
+    <p>
+      <br>
+    <p>Meu objetivo é ingressar em uma vaga em que eu possa me aperfeiçoar, buscando novos conhecimentos e aprimorando
+      os que eu já possuo </p>
     <br>
-    <p>26 Anos - 16/02/1997<p>
-    <br>
-    <p>Meu objetivo é ingressar em uma vaga em que eu possa me aperfeiçoar, buscando novos conhecimentos e aprimorando os que eu já possuo  </p>
+    <a href="https://www.linkedin.com/in/matheus-laidmer-da-silva/" target="_blank"><button>LinkedIn</button></a>
   </header>
   <main>
     <section class="section">
@@ -95,7 +102,8 @@
         <li>
           <strong>Responsabilidades:</strong>
           <ul>
-            <li>Lecionar sobre diversos assuntos quanto a tecnologia. Assim como pacote office, pacote adobe, programação e design.</li>
+            <li>Lecionar sobre diversos assuntos quanto a tecnologia. Assim como pacote office, pacote adobe,
+              programação e design.</li>
             <li>Prestar serviços de produção de conteúdo para sites e redes sociais da empresa.</li>
             <li>Gerenciar o website da escola e responder dúvidas dos alunos através do mesmo.</li>
           </ul>
@@ -154,7 +162,7 @@
         <li>
           <strong>Responsabilidades:</strong>
           <ul>
-            <li>Realizar configurações de máquinas para usuários, gerenciamento de usuáios e Active Directory.</li>
+            <li>Realizar configurações de máquinas para usuários, gerenciamento de usuários e Active Directory.</li>
             <li>Suporte aos usuários do sistema Protheus (TOTVS).</li>
             <li>Criação de backups, gerenciamento de servidores e Linux.</li>
           </ul>
@@ -173,15 +181,16 @@
       </ul>
     </section>
     <section class="section">
-        <h2>Cursos</h2>
-        <ul>
-          <li></li>
-          <li>Linux</li>
-          <li>Bash/Shell Script</li>
-          <li>Gerenciamento de Database</li>
-          <li>Linha de comando/terminal Linux, Windows (powershell) e MacOS</li>
-        </ul>
-      </section>
+      <h2>Cursos</h2>
+      <ul>
+        <li></li>
+        <li>The Linux Command Guide Bootcamp 2023 - Colt Steele - Udemy</li>
+        <li>BCyber Security: From Beginner to Expert 2022 - Logix Academy - Udemy</li>
+        <li>Linux Administration Bootcamp: From Beginner to Expert - Jason Cannon - Udemy</li>
+        <li>Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - Udemy - Em andamento</li>
+      </ul>
+    </section>
   </main>
 </body>
+
 </html>
