modified:   .DS_Store 	renamed:    index.html -> indexenglish.html 	new file:   indexportuguese.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -19,7 +19,7 @@
         <div class="details">Matheus Laidmer da Silva</div>
       </div>
       <div class="item">
-        <div class="title">Email:</div>
+        <div class="title">E-mail:</div>
         <div class="details">matheuslaidmer@gmail.com</div>
       </div>
       <div class="item">
@@ -33,6 +33,19 @@
       <div class="item">
         <div class="title">Degree:</div>
         <div class="details">Middle School</div>
+      </div>
+      <div class="item">
+        <div class="title">Institution:</div>
+        <div class="details">Colégio Teutônia</div>
+      </div>
+      <div class="item">
+        <div class="title">Date:</div>
+        <div class="details">2012-2014</div>
+      </div>
+      <hr>
+      <div class="item">
+        <div class="title">Degree:</div>
+        <div class="details">IT Technician</div>
       </div>
       <div class="item">
         <div class="title">Institution:</div>
