modified:   app.css 	modified:   indexenglish.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -14,19 +14,31 @@
   <div class="container">
     <div class="section">
       <h2>Personal Information</h2>
-      <div class="item">
-        <div class="title">Name:</div>
-        <div class="details">Matheus Laidmer da Silva</div>
-      </div>
-      <div class="item">
-        <div class="title">E-mail:</div>
-        <div class="details">matheuslaidmer@gmail.com</div>
-      </div>
-      <div class="item">
-        <div class="title">Phone:</div>
-        <div class="details">+55 (51) 99610-7939</div>
-      </div>
+        <div class="section-grid">
+          <div class="col1">
+            <div class="item">
+              <div class="title">Name:</div>
+              <div class="details">Matheus Laidmer da Silva</div>
+            </div>
+            <div class="item">
+              <div class="title">E-mail:</div>
+              <div class="details">matheuslaidmer@gmail.com</div>
+            </div>
+            <div class="item">
+              <div class="title">Phone:</div>
+              <div class="details">+55 (51) 99610-7939</div>
+            </div>
+          </div>
+          <div class="col2">
+            <div class="item">
+              <div class="title">Goals:</div>
+              <div class="details">My personal goal is to join in a vacant job that i can improve myself, always seeking new knowledges.</div>
+            </div>
+            
+          </div>
+        </div>
     </div>
+ 
   
     <div class="section">
       <h2>Education</h2>
@@ -71,6 +83,8 @@
     </div>
     <div class="section">
       <h2>Work Experience</h2>
+      <div class="section-grid">
+      <div class="col1">
       <div class="item">
         <div class="title">Company:</div>
         <div class="details">Nutritec</div>
@@ -83,6 +97,14 @@
         <div class="title">Date:</div>
         <div class="details">2023-present</div>
       </div>
+    </div>
+    <div class="col2">
+      <div class="item">
+        <div class="title">Activities:</div>
+        <div class="details">Protheus (TOTVS) support; Asset management; Linux server; Active Directory; Back-up; Sysadm.</div>
+      </div>
+    </div>
+    </div>
       <hr>
       <div class="item">
         <div class="title">Company:</div>
