modified:   indexenglish.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -33,7 +33,6 @@
               <div class="title">Goals:</div>
               <div class="details">My personal goal is to join in a vacant job that i can improve myself, always seeking new knowledges.</div>
             </div>
-            
           </div>
         </div>
     </div>
@@ -41,7 +40,7 @@
       <h2>Education</h2>
       <div class="item">
         <div class="title">Degree:</div>
-        <div class="details">Middle School</div>
+        <div class="details">High School</div>
       </div>
       <div class="item">
         <div class="title">Institution:</div>
@@ -103,20 +102,31 @@
         </div>
       </div>
       <hr>
+      <div class="section-grid">
+        <div class="col1">
           <div class="item">
             <div class="title">Company:</div>
             <div class="details">Teutoaço</div>
           </div>
-      
           <div class="item">
             <div class="title">Position:</div>
-            <div class="details">Soldering</div>
+            <div class="details">Production assistant</div>
           </div>
           <div class="item">
             <div class="title">Date:</div>
             <div class="details">2022-2023</div>
           </div>
-      <hr>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Activities:</div>
+            <div class="details">Soldering; Production and assembly of steel artifacts</div>
+          </div>
+        </div>
+      </div>
+    <hr>
+      <div class="section-grid">
+        <div class="col1">
           <div class="item">
             <div class="title">Company:</div>
             <div class="details">Instituto Mix</div>
@@ -129,6 +139,12 @@
             <div class="title">Date:</div>
             <div class="details">2022</div>
           </div>
+        </div>
+        <div class="col2">
+          <div class="title">Activities:</div>
+          <div class="details">Teacher/Instructor; </div>
+        </div>
+      </div>
       <hr>
           <div class="item">
             <div class="title">Company:</div>
