--- a/indexenglish.html
+++ b/indexenglish.html
@@ -120,7 +120,7 @@
         <div class="col2">
           <div class="item">
             <div class="title">Activities:</div>
-            <div class="details">Soldering; Production and assembly of steel artifacts</div>
+            <div class="details">Soldering; Production and assembly of steel artifacts.</div>
           </div>
         </div>
       </div>
@@ -141,36 +141,58 @@
           </div>
         </div>
         <div class="col2">
-          <div class="title">Activities:</div>
-          <div class="details">Teacher/Instructor; </div>
+          <div class="item">
+            <div class="title">Activities:</div>
+            <div class="details">Teacher/Instructor; Asset manager.</div>
+          </div>
         </div>
       </div>
       <hr>
+      <div class="section-grid">
+        <div class="col1">
           <div class="item">
             <div class="title">Company:</div>
             <div class="details">Escola Schaeffer</div>
           </div>
           <div class="item">
             <div class="title">Position:</div>
-            <div class="details">Teacher</div>
+            <div class="details"></div>
           </div>
           <div class="item">
             <div class="title">Date:</div>
             <div class="details">2020-2021</div>
           </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Activities:</div>
+            <div class="details">Teacher/Instructor; Asset manager.</div>
+          </div>
+        </div>
+      </div>
       <hr>
+      <div class="section-grid">
+        <div class="col1">
           <div class="item">
             <div class="title">Company:</div>
             <div class="details">AR Plano Digital</div>
           </div>
-          <div class="item">  
+          <div class="item">
             <div class="title">Position:</div>
-            <div class="details">IT Support</div>
+            <div class="details">IT Support, Manager, Instructor.</div>
           </div>
           <div class="item">
             <div class="title">Date:</div>
             <div class="details">2016-2019</div>
           </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Activities:</div>
+            <div class="details">It Support; Documental Support; Instructor.</div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="section">
       <h2>Courses</h2>
