modified:   indexenglish.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -156,7 +156,7 @@
           </div>
           <div class="item">
             <div class="title">Position:</div>
-            <div class="details"></div>
+            <div class="details">Teacher/Instructor; Asset manager.</div>
           </div>
           <div class="item">
             <div class="title">Date:</div>
