modified:   .DS_Store 	modified:   indexenglish.html 	modified:   indexportuguese.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -8,7 +8,15 @@
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
+    <div class="section-grid">
+      <div class="col1">
     <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
+  </div>
+  <div class="col2">
+    <i class="fa-brands fa-instagram fa-2xl"></i>
+    <i class="fa-brands fa-square-github fa-2xl"></i>
+  </div>    
+  </div>
   </header> 
   <div class="container">
     <div class="section">
@@ -21,7 +29,7 @@
             </div>
             <div class="item">
               <div class="title">E-mail:</div>
-              <div class="details">matheuslaidmer@gmail.com</div>
+              <div class="details"></a>matheuslaidmer@gmail.com</div>
             </div>
             <div class="item">
               <div class="title">Phone:</div>
@@ -213,6 +221,7 @@
           </ul>
         </div>
     </div>
+    <script src="https://kit.fontawesome.com/d23dc4bbc3.js" crossorigin="anonymous"></script>
   </div>
 </body>
 </html>
