--- a/indexportuguese.html
+++ b/indexportuguese.html
@@ -9,29 +9,37 @@
   <header>
     <h1>Curriculum Vitae</h1>
     <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
-  </header>
-  
+  </header> 
   <div class="container">
     <div class="section">
-      <h2>Informações pessoais</h2>
-      <div class="item">
-        <div class="title">Nome:</div>
-        <div class="details">Matheus Laidmer da Silva</div>
-      </div>
-      <div class="item">
-        <div class="title">E-mail:</div>
-        <div class="details">matheuslaidmer@gmail.com</div>
-      </div>
-      <div class="item">
-        <div class="title">Telefone:</div>
-        <div class="details">+55 (51) 99610-7939</div>
-      </div>
+      <h2>Informações Pessoais</h2>
+        <div class="section-grid">
+          <div class="col1">
+            <div class="item">
+              <div class="title">Nome:</div>
+              <div class="details">Matheus Laidmer da Silva</div>
+            </div>
+            <div class="item">
+              <div class="title">E-mail:</div>
+              <div class="details">matheuslaidmer@gmail.com</div>
+            </div>
+            <div class="item">
+              <div class="title">Telefone:</div>
+              <div class="details">+55 (51) 99610-7939</div>
+            </div>
+          </div>
+          <div class="col2">
+            <div class="item">
+              <div class="title">Objetivos:</div>
+              <div class="details">Meu objetivo pessoal é ingressar numa vaga onde eu possa me aperfeiçoar, buscando novos conhecimentos e aprimorando os que eu já possuo.</div>
+            </div>
+          </div>
+        </div>
     </div>
-  
     <div class="section">
       <h2>Educação</h2>
       <div class="item">
-        <div class="title">Curso:</div>
+        <div class="title">Grau:</div>
         <div class="details">Ensino Médio</div>
       </div>
       <div class="item">
@@ -39,122 +47,171 @@
         <div class="details">Colégio Teutônia</div>
       </div>
       <div class="item">
-        <div class="title">Data:</div>
+        <div class="title">Período:</div>
         <div class="details">2012-2014</div>
       </div>
       <hr>
-    <div class="item">
-        <div class="title">Curso:</div>
-        <div class="details">Técnico em informática</div>
+      <div class="item">
+        <div class="title">Grau:</div>
+        <div class="details">Técnico em Tecnologia da Informação</div>
       </div>
       <div class="item">
         <div class="title">Instituição:</div>
         <div class="details">Colégio Teutônia</div>
       </div>
       <div class="item">
-        <div class="title">Data:</div>
+        <div class="title">Período:</div>
         <div class="details">2012-2014</div>
       </div>
       <hr>
-      <div class="item">
-        <div class="title">Curso:</div>
-        <div class="details">Análise e Desenvolvimento de Sistemas</div>
-      </div>
-      <div class="item">
-        <div class="title">Instituição:</div>
-        <div class="details">UNIVATES</div>
-      </div>
-      <div class="item">
-        <div class="title">Data:</div>
-        <div class="details">2022-Em Andamento</div>
-      </div>
+    <div class="item">
+      <div class="title">Grau:</div>
+      <div class="details">Análise e Desenvolvimento de Sistemas</div>
+    </div>
+    <div class="item">
+      <div class="title">Instituição:</div>
+      <div class="details">UNIVATES</div>
+    </div>
+    <div class="item">
+      <div class="title">Período</div>
+      <div class="details">2022-Em andamento</div>
+    </div>
     </div>
     <div class="section">
-      <h2>Experiência</h2>
-      <div class="item">
-        <div class="title">Empresa:</div>
-        <div class="details">Nutritec</div>
-      </div>
-      <div class="item">
-        <div class="title">Cargo:</div>
-        <div class="details">Assistente de TI</div>
-      </div>
-      <div class="item">
-        <div class="title">Data:</div>
-        <div class="details">2023-presente</div>
-      </div>
-      <hr>
-      <div class="item">
-        <div class="title">Empresa:</div>
-        <div class="details">Teutoaço</div>
+      <h2>Experiência de trabalho</h2>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Empresa:</div>
+            <div class="details">Nutritec</div>
+          </div>
+            <div class="item">
+            <div class="title">Cargo:</div>
+            <div class="details">Assistente de TI</div>
+          </div>
+          <div class="item">
+            <div class="title">Período:</div>
+            <div class="details">2023-Presentes dias</div>
+          </div>
         </div>
-      <div class="item">
-        <div class="title">Cargo:</div>
-        <div class="details">Soldador/Auxiliar de Produção</div>
-      </div>
-      <div class="item">
-        <div class="title">Data:</div>
-        <div class="details">2022-2023</div>
-      </div>
-      <hr>
-      <div class="item">
-          <div class="title">Empresa:</div>
-          <div class="details">Instituto Mix</div>
-      </div>
-      <div class="item">
-          <div class="title">Cargo:</div>
-          <div class="details">Professor</div>
-      </div>
-      <div class="item">
-          <div class="title">Data:</div>
-          <div class="details">2022</div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Atividades:</div>
+            <div class="details">Suporte Protheus (TOTVS); Gerência de ativos; Servidor Linux; Active Directory; Back-up; Administrador de sistema.</div>
+          </div>
+        </div>
       </div>
       <hr>
-      <div class="item">
-          <div class="title">Empresa:</div>
-          <div class="details">Escola Schaeffer</div>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Empresa:</div>
+            <div class="details">Teutoaço</div>
+          </div>
+          <div class="item">
+            <div class="title">Cargo:</div>
+            <div class="details">Assistente de produção</div>
+          </div>
+          <div class="item">
+            <div class="title">Período:</div>
+            <div class="details">2022-2023</div>
+          </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Atividades:</div>
+            <div class="details">Solda; Produção e manufatura de artefatos de aço.</div>
+          </div>
+        </div>
       </div>
-      <div class="item">
-          <div class="title">Cargo:</div>
-          <div class="details">Teacher</div>
-      </div>
-      <div class="item">
-          <div class="title">Data:</div>
-          <div class="details">2020-2021</div>
+    <hr>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Empresa:</div>
+            <div class="details">Instituto Mix</div>
+          </div>
+          <div class="item">
+            <div class="title">Cargo:</div>
+            <div class="details">Professor</div>
+          </div>
+          <div class="item">
+            <div class="title">Período:</div>
+            <div class="details">2022</div>
+          </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Atividades:</div>
+            <div class="details">Professor/Instrutor; Gerencia de ativos.</div>
+          </div>
+        </div>
       </div>
       <hr>
-      <div class="item">
-          <div class="title">Empresa:</div>
-          <div class="details">AR Plano Digital</div>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Empresa:</div>
+            <div class="details">Escola Schaeffer</div>
+          </div>
+          <div class="item">
+            <div class="title">Cargo:</div>
+            <div class="details">Professor; Atividades de Design; Gerencia de ativos.</div>
+          </div>
+          <div class="item">
+            <div class="title">Período:</div>
+            <div class="details">2020-2021</div>
+          </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Atividades:</div>
+            <div class="details">Professor/Instrutor; Gerencia de ativos.</div>
+          </div>
+        </div>
       </div>
-      <div class="item">  
-          <div class="title">Cargo:</div>
-          <div class="details">IT Support</div>
-      </div>
-      <div class="item">
-          <div class="title">Data:</div>
-          <div class="details">2016-2019</div>
+      <hr>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Empresa:</div>
+            <div class="details">AR Plano Digital</div>
+          </div>
+          <div class="item">
+            <div class="title">Cargo:</div>
+            <div class="details">Suporte, Gerência, Instrutor.</div>
+          </div>
+          <div class="item">
+            <div class="title">Date:</div>
+            <div class="details">2016-2019</div>
+          </div>
+        </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Activities:</div>
+            <div class="details">Suporte técnico e documental; Realizar treinamento de novos empregados; Gerência de ativos; Emitir certificado digital.</div>
+          </div>
+        </div>
       </div>
     </div>
-
     <div class="section">
       <h2>Cursos</h2>
-      <div class="item">
-        <ul>
-          <li>
-            Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - Em Andamento
-          </li>
-          <li>
-            Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
-          </li>
-          <li>
-            Cyber Security: From Beginner to Expert - Logix Academy - 2023
-          </li>
-          <li>
-            The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
-          </li>
-        </ul>
-      </div>
+        <div class="item">
+          <ul>
+            <li>
+              Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - Em andamento
+            </li>
+            <li>
+              Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
+            </li>
+            <li>
+              Cyber Security: From Beginner to Expert - Logix Academy - 2023
+            </li>
+            <li>
+              The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
+            </li>
+          </ul>
+        </div>
     </div>
   </div>
 </body>
