modified:   app.css 	modified:   indexenglish.html 	modified:   indexportuguese.html

--- a/indexenglish.html
+++ b/indexenglish.html
@@ -1,48 +1,56 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Curriculum Vitae</title>
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
+
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
     <div class="section-grid">
       <div class="col1">
-    <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
-  </div>
-  <div class="col2">
-    <i class="fa-brands fa-instagram fa-2xl"></i>
-    <i class="fa-brands fa-square-github fa-2xl"></i>
-  </div>    
-  </div>
-  </header> 
+        <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
+      </div>
+      <div class="col2">
+        <div class="icons">
+          <a href="https://www.instagram.com/pantsls/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+          <a href="https://github.com/matheuslaidmer" target="_blank"><i
+              class="fa-brands fa-square-github fa-2xl"></i></a>
+          <a href="https://www.linkedin.com/in/matheus-laidmer-da-silva/" target="_blank"><i
+              class="fa-brands fa-linkedin fa-2xl"></i></a>
+        </div>
+      </div>
+    </div>
+  </header>
   <div class="container">
     <div class="section">
       <h2>Personal Information</h2>
-        <div class="section-grid">
-          <div class="col1">
-            <div class="item">
-              <div class="title">Name:</div>
-              <div class="details">Matheus Laidmer da Silva</div>
-            </div>
-            <div class="item">
-              <div class="title">E-mail:</div>
-              <div class="details"></a>matheuslaidmer@gmail.com</div>
-            </div>
-            <div class="item">
-              <div class="title">Phone:</div>
-              <div class="details">+55 (51) 99610-7939</div>
-            </div>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Name:</div>
+            <div class="details">Matheus Laidmer da Silva</div>
           </div>
-          <div class="col2">
-            <div class="item">
-              <div class="title">Goals:</div>
-              <div class="details">My personal goal is to join in a vacant job that i can improve myself, always seeking new knowledges.</div>
-            </div>
+          <div class="item">
+            <div class="title">E-mail:</div>
+            <div class="details"></a>matheuslaidmer@gmail.com</div>
+          </div>
+          <div class="item">
+            <div class="title">Phone:</div>
+            <div class="details">+55 (51) 99610-7939</div>
           </div>
         </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Goals:</div>
+            <div class="details">My personal goal is to join in a job vacancy that i can improve myself, always seeking
+              new knowledges.</div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="section">
       <h2>Education</h2>
@@ -72,18 +80,18 @@
         <div class="details">2012-2014</div>
       </div>
       <hr>
-    <div class="item">
-      <div class="title">Degree:</div>
-      <div class="details">Systems Analysis and Development</div>
-    </div>
-    <div class="item">
-      <div class="title">Institution:</div>
-      <div class="details">UNIVATES</div>
-    </div>
-    <div class="item">
-      <div class="title">Date:</div>
-      <div class="details">2022-in progress</div>
-    </div>
+      <div class="item">
+        <div class="title">Degree:</div>
+        <div class="details">Systems Analysis and Development</div>
+      </div>
+      <div class="item">
+        <div class="title">Institution:</div>
+        <div class="details">UNIVATES</div>
+      </div>
+      <div class="item">
+        <div class="title">Date:</div>
+        <div class="details">2022-in progress</div>
+      </div>
     </div>
     <div class="section">
       <h2>Work Experience</h2>
@@ -93,7 +101,7 @@
             <div class="title">Company:</div>
             <div class="details">Nutritec</div>
           </div>
-            <div class="item">
+          <div class="item">
             <div class="title">Position:</div>
             <div class="details">IT Assistent</div>
           </div>
@@ -105,7 +113,8 @@
         <div class="col2">
           <div class="item">
             <div class="title">Activities:</div>
-            <div class="details">Protheus (TOTVS) support; Asset management; Linux server; Active Directory; Back-up; Sysadm.</div>
+            <div class="details">Protheus (TOTVS) support; Asset management; Linux server; Active Directory; Back-up;
+              Sysadm.</div>
           </div>
         </div>
       </div>
@@ -132,7 +141,7 @@
           </div>
         </div>
       </div>
-    <hr>
+      <hr>
       <div class="section-grid">
         <div class="col1">
           <div class="item">
@@ -204,24 +213,25 @@
     </div>
     <div class="section">
       <h2>Courses</h2>
-        <div class="item">
-          <ul>
-            <li>
-              Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - in progress
-            </li>
-            <li>
-              Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
-            </li>
-            <li>
-              Cyber Security: From Beginner to Expert - Logix Academy - 2023
-            </li>
-            <li>
-              The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
-            </li>
-          </ul>
-        </div>
+      <div class="item">
+        <ul>
+          <li>
+            Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - in progress
+          </li>
+          <li>
+            Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
+          </li>
+          <li>
+            Cyber Security: From Beginner to Expert - Logix Academy - 2023
+          </li>
+          <li>
+            The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
+          </li>
+        </ul>
+      </div>
     </div>
     <script src="https://kit.fontawesome.com/d23dc4bbc3.js" crossorigin="anonymous"></script>
   </div>
 </body>
+
 </html>
