--- a/indexportuguese.html
+++ b/indexportuguese.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <title>Curriculum Vitae</title>
   <link rel="stylesheet" type="text/css" href="app.css">
 </head>
+
 <body>
   <header>
     <h1>Curriculum Vitae</h1>
-    <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
-  </header> 
+    <div class="section-grid">
+      <div class="col1">
+        <img src="./images/foto.jpeg" alt="Profile Picture" class="profile-picture">
+      </div>
+      <div class="col2">
+        <div class="icons">
+          <a href="https://www.instagram.com/pantsls/" target="_blank"><i class="fa-brands fa-instagram fa-2xl"></i></a>
+          <a href="https://github.com/matheuslaidmer" target="_blank"><i
+              class="fa-brands fa-square-github fa-2xl"></i></a>
+          <a href="https://www.linkedin.com/in/matheus-laidmer-da-silva/" target="_blank"><i
+              class="fa-brands fa-linkedin fa-2xl"></i></a>
+        </div>
+      </div>
+    </div>
+  </header>
   <div class="container">
     <div class="section">
       <h2>Informações Pessoais</h2>
-        <div class="section-grid">
-          <div class="col1">
-            <div class="item">
-              <div class="title">Nome:</div>
-              <div class="details">Matheus Laidmer da Silva</div>
-            </div>
-            <div class="item">
-              <div class="title">E-mail:</div>
-              <div class="details">matheuslaidmer@gmail.com</div>
-            </div>
-            <div class="item">
-              <div class="title">Telefone:</div>
-              <div class="details">+55 (51) 99610-7939</div>
-            </div>
+      <div class="section-grid">
+        <div class="col1">
+          <div class="item">
+            <div class="title">Nome:</div>
+            <div class="details">Matheus Laidmer da Silva</div>
           </div>
-          <div class="col2">
-            <div class="item">
-              <div class="title">Objetivos:</div>
-              <div class="details">Meu objetivo pessoal é ingressar numa vaga onde eu possa me aperfeiçoar, buscando novos conhecimentos e aprimorando os que eu já possuo.</div>
-            </div>
+          <div class="item">
+            <div class="title">E-mail:</div>
+            <div class="details">matheuslaidmer@gmail.com</div>
+          </div>
+          <div class="item">
+            <div class="title">Telefone:</div>
+            <div class="details">+55 (51) 99610-7939</div>
           </div>
         </div>
+        <div class="col2">
+          <div class="item">
+            <div class="title">Objetivos:</div>
+            <div class="details">Meu objetivo pessoal é ingressar numa vaga onde eu possa me aperfeiçoar, buscando novos
+              conhecimentos e aprimorando os que eu já possuo.</div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="section">
       <h2>Educação</h2>
@@ -64,18 +80,18 @@
         <div class="details">2012-2014</div>
       </div>
       <hr>
-    <div class="item">
-      <div class="title">Grau:</div>
-      <div class="details">Análise e Desenvolvimento de Sistemas</div>
-    </div>
-    <div class="item">
-      <div class="title">Instituição:</div>
-      <div class="details">UNIVATES</div>
-    </div>
-    <div class="item">
-      <div class="title">Período</div>
-      <div class="details">2022-Em andamento</div>
-    </div>
+      <div class="item">
+        <div class="title">Grau:</div>
+        <div class="details">Análise e Desenvolvimento de Sistemas</div>
+      </div>
+      <div class="item">
+        <div class="title">Instituição:</div>
+        <div class="details">UNIVATES</div>
+      </div>
+      <div class="item">
+        <div class="title">Período</div>
+        <div class="details">2022-Em andamento</div>
+      </div>
     </div>
     <div class="section">
       <h2>Experiência de trabalho</h2>
@@ -85,7 +101,7 @@
             <div class="title">Empresa:</div>
             <div class="details">Nutritec</div>
           </div>
-            <div class="item">
+          <div class="item">
             <div class="title">Cargo:</div>
             <div class="details">Assistente de TI</div>
           </div>
@@ -97,7 +113,8 @@
         <div class="col2">
           <div class="item">
             <div class="title">Atividades:</div>
-            <div class="details">Suporte Protheus (TOTVS); Gerência de ativos; Servidor Linux; Active Directory; Back-up; Administrador de sistema.</div>
+            <div class="details">Suporte Protheus (TOTVS); Gerência de ativos; Servidor Linux; Active Directory;
+              Back-up; Administrador de sistema.</div>
           </div>
         </div>
       </div>
@@ -124,7 +141,7 @@
           </div>
         </div>
       </div>
-    <hr>
+      <hr>
       <div class="section-grid">
         <div class="col1">
           <div class="item">
@@ -189,30 +206,33 @@
         <div class="col2">
           <div class="item">
             <div class="title">Activities:</div>
-            <div class="details">Suporte técnico e documental; Realizar treinamento de novos empregados; Gerência de ativos; Emitir certificado digital.</div>
+            <div class="details">Suporte técnico e documental; Realizar treinamento de novos empregados; Gerência de
+              ativos; Emitir certificado digital.</div>
           </div>
         </div>
       </div>
     </div>
     <div class="section">
       <h2>Cursos</h2>
-        <div class="item">
-          <ul>
-            <li>
-              Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - Em andamento
-            </li>
-            <li>
-              Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
-            </li>
-            <li>
-              Cyber Security: From Beginner to Expert - Logix Academy - 2023
-            </li>
-            <li>
-              The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
-            </li>
-          </ul>
-        </div>
+      <div class="item">
+        <ul>
+          <li>
+            Bash Mastery: The Complete Guide to Bash Shell Scripting - Ziyad Yehia - Em andamento
+          </li>
+          <li>
+            Linux Administration Bootcamp: Go from Beginner to Advanced - Jason Cannon - 2023
+          </li>
+          <li>
+            Cyber Security: From Beginner to Expert - Logix Academy - 2023
+          </li>
+          <li>
+            The Linux Command Line Bootcamp: Beginner To Power User - Colt Steele - 2023
+          </li>
+        </ul>
+      </div>
     </div>
+    <script src="https://kit.fontawesome.com/d23dc4bbc3.js" crossorigin="anonymous"></script>
   </div>
 </body>
+
 </html>
